# piwatch

./: .gitignore  LICENSE  README.md
agent/: install.sh  piwatch-agent.service  pyproject.toml
agent/piwatch_agent/: __main__.py  config.py  server.py
agent/piwatch_agent/collectors/: cpu.py  cron.py  disk.py  docker.py  memory.py  network.py  process.py  system.py  temperature.py  wifi.py
dashboard/: Dockerfile  docker-compose.yml  package-lock.json  package.json
dashboard/src/: instrumentation.ts
dashboard/src/app/: layout.tsx
dashboard/src/app/(dashboard)/: layout.tsx
dashboard/src/app/(dashboard)/dashboard/: page.tsx
dashboard/src/app/(dashboard)/devices/[id]/: page.tsx
dashboard/src/app/(dashboard)/settings/: page.tsx
dashboard/src/app/api/devices/: route.ts
dashboard/src/app/api/discover/: route.ts
dashboard/src/app/api/settings/: route.ts
dashboard/src/app/api/stream/: route.ts
dashboard/src/components/dashboard/: alerts-list.tsx  device-card.tsx  fleet-overview-cards.tsx
dashboard/src/components/device-detail/: cron-job-table.tsx  docker-table.tsx  metrics-charts.tsx  process-table.tsx  system-info.tsx  wifi-card.tsx
dashboard/src/components/layout/: header.tsx  sidebar.tsx
dashboard/src/components/settings/: device-form.tsx  device-list.tsx  threshold-settings.tsx
dashboard/src/hooks/: use-devices.ts  use-metrics.ts  use-sse.ts
dashboard/src/lib/: db.ts  poller.ts  schema.ts  sse.ts  utils.ts
dashboard/src/stores/: device-store.ts
dashboard/src/types/: index.ts
docs/: com.piwatch.dashboard.plist
(+5 files in other folders)
